// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Divider Normal 1`] = `
.c0 {
  width: 100%;
  border-top: 1px solid #dfe3ed;
  margin: 12px 0;
}

<div
  style={
    Object {
      "width": 200,
    }
  }
>
  <hr
    className="c0"
  />
</div>
`;

exports[`Storyshots Divider With Label 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 8px 0;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  color: #8da2b5;
  white-space: nowrap;
}

.c0::before,
.c0::after {
  width: 100%;
  border-top: 1px solid #dfe3ed;
  margin: 12px 0;
  display: block;
  content: '';
}

.c0::before {
  margin-right: 8px;
}

.c0::after {
  margin-left: 8px;
}

<div
  style={
    Object {
      "width": 200,
    }
  }
>
  <div
    className="c0"
  >
    Button
  </div>
</div>
`;
